// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages view passenger types should render correctly when groups and individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  exportEnabled={false}
  referer="hello"
  showNavigation={true}
  title="Passenger Types - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
    data-card-count={2}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Passenger types
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define age range and required proof documents of your passengers as well as passenger groups
      </p>
      <div>
        <IndividualPassengerTypes
          deleteActionHandler={[Function]}
          deleteEnabled={false}
          singlePassengerTypes={
            Array [
              Object {
                "id": 1,
                "name": "Regular Child",
                "passengerType": Object {
                  "ageRangeMax": "16",
                  "ageRangeMin": "5",
                  "id": 1,
                  "passengerType": "child",
                  "proofDocuments": Array [
                    "studentCard",
                  ],
                },
              },
            ]
          }
        />
        <a
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/managePassengerTypes"
        >
          Add a passenger type
        </a>
      </div>
      <div
        className="govuk-!-margin-top-4"
      >
        <PassengerTypeGroups
          deleteActionHandler={[Function]}
          deleteEnabled={false}
          passengerTypeGroups={
            Array [
              Object {
                "groupPassengerType": Object {
                  "companions": Array [
                    Object {
                      "id": 1,
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "id": 2,
                      "maxNumber": "1",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
                "id": 3,
                "name": "family group",
              },
            ]
          }
        />
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/managePassengerGroup"
        >
          Add a passenger group
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when no individual or group passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  exportEnabled={false}
  referer={null}
  showNavigation={true}
  title="Passenger Types - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
    data-card-count={0}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Passenger types
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define age range and required proof documents of your passengers as well as passenger groups
      </p>
      <div>
        <NoIndividualPassengerTypes />
        <a
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/managePassengerTypes"
        >
          Add a passenger type
        </a>
      </div>
      <div
        className="govuk-!-margin-top-4"
      >
        <NoPassengerTypeGroups />
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  exportEnabled={false}
  referer="hello"
  showNavigation={true}
  title="Passenger Types - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
    data-card-count={1}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Passenger types
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define age range and required proof documents of your passengers as well as passenger groups
      </p>
      <div>
        <IndividualPassengerTypes
          deleteActionHandler={[Function]}
          deleteEnabled={false}
          singlePassengerTypes={
            Array [
              Object {
                "id": 1,
                "name": "Regular Child",
                "passengerType": Object {
                  "ageRangeMax": "16",
                  "ageRangeMin": "5",
                  "id": 1,
                  "passengerType": "child",
                  "proofDocuments": Array [
                    "studentCard",
                  ],
                },
              },
            ]
          }
        />
        <a
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/managePassengerTypes"
        >
          Add a passenger type
        </a>
      </div>
      <div
        className="govuk-!-margin-top-4"
      >
        <NoPassengerTypeGroups />
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/managePassengerGroup"
        >
          Add a passenger group
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only passenger type groups 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  exportEnabled={false}
  referer={null}
  showNavigation={true}
  title="Passenger Types - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
    data-card-count={1}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Passenger types
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define age range and required proof documents of your passengers as well as passenger groups
      </p>
      <div>
        <NoIndividualPassengerTypes />
        <a
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/managePassengerTypes"
        >
          Add a passenger type
        </a>
      </div>
      <div
        className="govuk-!-margin-top-4"
      >
        <PassengerTypeGroups
          deleteActionHandler={[Function]}
          deleteEnabled={false}
          passengerTypeGroups={
            Array [
              Object {
                "groupPassengerType": Object {
                  "companions": Array [
                    Object {
                      "id": 1,
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "id": 2,
                      "maxNumber": "1",
                      "minNumber": "0",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
                "id": 0,
                "name": "family group",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</BaseLayout>
`;
